--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -12,11 +12,7 @@
 
   <title>Members Directory</title>
 
-  <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css">
-
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/js/materialize.min.js"></script>
   <link rel="stylesheet" href="stylesheets/app.css" />
 
   <!-- Fav and touch icons -->
@@ -32,6 +28,8 @@
   <![endif]-->
 
   <script src="javascripts/vendor.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/js/materialize.min.js"></script>
+  <script src="//www.parsecdn.com/js/parse-1.3.5.min.js"></script>
   <script src="javascripts/app.js"></script>
   <script>require('initialize')</script>
 
