Template: Add main nav and routing

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -36,5 +36,21 @@
 </head>
 <body>
 
+  <div id="app">
+    <nav>
+      <div class="nav-wrapper blue-grey darken-1">
+        <a href="#" class="brand-logo right">Members Directory</a>
+        <ul id="nav-mobile" class="left">
+          <li><a href="#topic">Topics</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <div id="ui-view">
+      <!-- app replacement -->
+    </div>
+
+  </div>
+
 </body>
 </html>
