--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -41,6 +41,7 @@
       <div class="nav-wrapper blue-grey darken-1">
         <a href="#" class="brand-logo right">Members Directory</a>
         <ul id="nav-mobile" class="left">
+          <li><a href="#register">Register</a></li>
           <li><a href="#topic">Topics</a></li>
         </ul>
       </div>
